Closed Bug 1237404 Opened 8 years ago Closed 8 years ago

Optimization and exposing more functionality in gfxCrashReporterUtils

Categories

(Core :: Graphics, defect)

45 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox46 --- fixed

People

(Reporter: milan, Assigned: milan)

References

Details

(Keywords: feature, Whiteboard: [gfx-noted])

Attachments

(2 files, 2 obsolete files)

Inspired by changes in bug 1235437 and the first review comment in bug 1235437 comment 2.  Avoid sending things to main thread if we're already on the main thread, and refactor things somewhat to expose underlying functionality for other use.
Also, keep bug 737413 in mind.
Assignee: nobody → milan
Whiteboard: [gfx-noted]
Attachment #8704815 - Flags: review?(bgirard) → review+
Comment on attachment 8704815 [details]
MozReview Request: Bug 1237404: Part 1. Exposing some functionality in gfxCrashReporterUtils. r?benwa

https://reviewboard.mozilla.org/r/29755/#review26597
Comment on attachment 8704816 [details]
MozReview Request: Bug 1237404: Part 2. Optimizing the main thread scenario. r?benwa

https://reviewboard.mozilla.org/r/29757/#review26599
Attachment #8704816 - Flags: review?(bgirard) → review+
Missing include.
Attachment #8704815 - Attachment is obsolete: true
Attachment #8704816 - Attachment is obsolete: true
Attachment #8705816 - Flags: review+
https://hg.mozilla.org/mozilla-central/rev/20e88a76cb9c
https://hg.mozilla.org/mozilla-central/rev/bd4db6412237
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: