Bug 1237404 - Part 2. Optimizing the main thread scenario. r=benwa